# phronesis

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: custom_prompts.py  rag_evaluation.py  run_evaluation.py
phronesis/: __init__.py  cli.py
phronesis/adversarial/: __init__.py  corrigibility.py  instrumental.py  prompts.py  reward_hacking.py
phronesis/core/: __init__.py  engine.py  metrics.py  ontologies.py
phronesis/inference/: __init__.py  batch_processor.py  mixed_precision.py
phronesis/rag/: __init__.py  faiss_index.py  retriever.py
phronesis/utils/: __init__.py  config.py  logging.py
prompts/adversarial/: corrigibility.json  instrumental_convergence.json
prompts/moral_ontologies/: deontological.json  utilitarian.json
rust/: Cargo.toml
rust/src/: lib.rs
tests/: __init__.py  test_adversarial.py  test_metrics.py  test_ontologies.py
